--- a/index.html
+++ b/index.html
@@ -1,6 +1,31 @@
-<html>
- <head>
-
-  
-</head> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <link rel="stylesheet" href="main.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Senior Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Carlito:ital,wght@0,400;0,700;1,400;1,700&family=Radley:ital@0;1&display=swap" rel="stylesheet">
+</head>
+<body>
+  <header class="top-nav">
+      <a href="project.html">Project</a>
+      <a href="lab.html">Lab</a>
+      <a href="cfu.html">CFU</a>
+  </header>
+  <img src="logo.png" alt="Main logo" class="top-logo">
+<img src="flower.png" alt="Decorative flower" class="corner-flower">
+<div class = "center-container">
+    <div>
+          <h1 style=""><i>Hello</i>, <b>I am Hailey!</b></h1>
+          <p>I am an upcoming digital app designer.</p>
+      <div class="about-me">
+          <h2 style="color: #9b4819;">About Me</h2>
+          
+      </div>
+      </div>
+  </div>
+ 
 </html>
