--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
   <header class="top-nav">
-      <a href="project.html">Project</a>
-      <a href="lab.html">Lab</a>
-      <a href="cfu.html">CFU</a>
+      <a href="project.html"><i>Project</i></a>
+      <a href="lab.html"><i>Lab</i></a>
+      <a href="cfu.html"><i>CFU</i></a>
   </header>
   <img src="logo.png" alt="Main logo" class="top-logo">
 <img src="flower.png" alt="Decorative flower" class="corner-flower">
