--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
           <h1 style=""><i>Hello</i>, <b>I am Hailey!</b></h1>
           <p>I am an upcoming digital app designer.</p>
       <div class="about-me">
-          <h2 style="color: #9b4819;">About Me</h2>
+          <h2 style="color: #9b4819;">
+            <a href="me.html">About Me</a>
+          </h2>
           
       </div>
       </div>
