--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
           <p>I am an upcoming digital app designer.</p>
       <div class="about-me">
           <h2 style="color: #9b4819;">
-            <a href="me.html" style= "font-family: "Radley", "serif; font-size: 30px;" color: #333; text-decoration: none; margin-left: 20px;
-  transition: color 0.3s ease;">About Me</a>
+                      <a href="me.html" style= "font-family: Radley, serif; font-size: 30px; color: #9b4819;"><i>About Me</i></a>
           </h2>
           
       </div>
