--- a/cfu.html
+++ b/cfu.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <link rel="stylesheet" href="main.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Senior Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Carlito:ital,wght@0,400;0,700;1,400;1,700&family=Radley:ital@0;1&display=swap" rel="stylesheet">
+</head>
+<body>
+  <header class="top-nav">
+      <a href="project.html"><i>Project</i></a>
+      <a href="lab.html"><i>Lab</i></a>
+      <a href="cfu.html"><i>CFU</i></a>
+  </header>
+<div class = "center-container">
+    <div>
+          <h1 style=""><i>Hello</i>, <b>I am Hailey!</b></h1>
+          <p>I am an upcoming digital app designer.</p>
 
+      </div>
+  </div>
+ 
+</html>
