--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 </head>
 <body>
   <header class="top-nav">
-      <a href="project.html"><i>Project</i></a>
-      <a href="lab.html"><i>Lab</i></a>
-      <a href="cfu.html"><i>CFU</i></a>
+      <a href="project/project.html"><i>Project</i></a>
+      <a href="lab/lab.html"><i>Lab</i></a>
+      <a href="cfu/cfu.html"><i>CFU</i></a>
   </header>
   <img src="logo.png" alt="Main logo" class="top-logo">
 <img src="flower.png" alt="Decorative flower" class="corner-flower">
 <div class = "center-container">
     <div>
-          <h1 style=""><i>Hello</i>, <b>I am Hailey!</b></h1>
+          <h1 style="color:#9b4819"><i>Hello</i>, <b>I am Hailey!</b></h1>
           <p>I am an upcoming digital app designer.</p>
       <div class="about-me">
           <h2 style="color: #9b4819;">
-                      <a href="me.html" style= "font-family: Radley, serif; font-size: 30px; color: #9b4819;"><i>About Me</i></a>
+                      <a href="About_me/me.html" style= "font-family: Radley, serif; font-size: 30px; color: #9b4819;"><i>About Me</i></a>
           </h2>
           
       </div>
