--- a/About_Me/me.html
+++ b/About_Me/me.html
@@ -11,9 +11,9 @@
 </head>
 <body>
   <header class="top-nav">
-      <a href="project.html"><i>Project</i></a>
-      <a href="lab.html"><i>Lab</i></a>
-      <a href="cfu.html"><i>CFU</i></a>
+      <a href="../index.html"><i>Home</i></a>
+      <a href="lab/lab.html"><i>Lab</i></a>
+      <a href="cfu/cfu.html"><i>CFU</i></a>
   </header>
 <div class = "center-container">
     <div>
