--- a/About_Me/me.html
+++ b/About_Me/me.html
@@ -17,8 +17,9 @@
   </header>
 <div class = "center-container">
     <div>
-          <h1 style=""><i>Hello</i>, <b>I am Hailey!</b></h1>
-          <p>I am an upcoming digital app designer.</p>
+          <h1 style=""><i>About</i>, <b>Hailey Sooknanan</b></h1>
+          <p>My name is Hailey Sooknanan, I am a senior in high school currently attending Thomas A Edison CTE High School. 
+            Here I am learning web and game design through my CTE program of Design and Development. I have completed both the HTML and Python certification.</p>
 
       </div>
   </div>
