--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <p>I am an upcoming digital app designer.</p>
       <div class="about-me">
           <h2 style="color: #9b4819;">
-                      <a href="About_me/me.html" style= "font-family: Radley, serif; font-size: 30px; color: #9b4819;"><i>About Me</i></a>
+                      <a href="About_Me/me.html" style= "font-family: Radley, serif; font-size: 30px; color: #9b4819;"><i>About Me</i></a>
           </h2>
           
       </div>
