--- a/About_Me/me.html
+++ b/About_Me/me.html
@@ -15,13 +15,16 @@
       <a href="lab/lab.html"><i>Lab</i></a>
       <a href="cfu/cfu.html"><i>CFU</i></a>
   </header>
-<div class = "center-container">
+<div class = "left-container">
     <div>
           <h1 style=""><i>About</i>, <b>Hailey Sooknanan</b></h1>
           <p>My name is Hailey Sooknanan, I am a senior in high school currently attending Thomas A Edison CTE High School. 
             Here I am learning web and game design through my CTE program of Design and Development. I have completed both the HTML and Python certification.</p>
 
       </div>
+  </div>
+  <div class = "right-container">
+    
   </div>
  
 </html>
