--- a/About_Me/me.html
+++ b/About_Me/me.html
@@ -12,8 +12,8 @@
 <body>
   <header class="top-nav">
       <a href="../index.html"><i>Home</i></a>
-      <a href="lab/lab.html"><i>Lab</i></a>
-      <a href="cfu/cfu.html"><i>CFU</i></a>
+      <a href="../lab/lab.html"><i>Lab</i></a>
+      <a href="../cfu/cfu.html"><i>CFU</i></a>
   </header>
 <div class = "left-container">
     <div>
