--- a/About_Me/me.html
+++ b/About_Me/me.html
@@ -15,9 +15,10 @@
       <a href="../lab/lab.html"><i>Lab</i></a>
       <a href="../cfu/cfu.html"><i>CFU</i></a>
   </header>
-<div class = "left-container">
+<div class container>
+  <div class = "left-container">
     <div>
-          <h1 style=""><i>About</i>, <b>Hailey Sooknanan</b></h1>
+          <h1 style=""><i>About,</i>, <b>Hailey Sooknanan</b></h1>
           <p>My name is Hailey Sooknanan, I am a senior in high school currently attending Thomas A Edison CTE High School. 
             Here I am learning web and game design through my CTE program of Design and Development. I have completed both the HTML and Python certification.</p>
 
@@ -26,5 +27,5 @@
   <div class = "right-container">
     
   </div>
- 
+</div>
 </html>
