--- a/About_Me/me.html
+++ b/About_Me/me.html
@@ -15,7 +15,7 @@
       <a href="../lab/lab.html"><i>Lab</i></a>
       <a href="../cfu/cfu.html"><i>CFU</i></a>
   </header>
-<div class container>
+<div class="grid-container">
   <div class = "left-container">
     <div>
           <h1 style=""><i>About,</i> <b>Hailey Sooknanan</b></h1>
