--- a/project/project.html
+++ b/project/project.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="project.css" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Senior Portfolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Carlito:ital,wght@0,400;0,700;1,400;1,700&family=Radley:ital@0;1&display=swap" rel="stylesheet">
+  <style>
+    h1{
+      text-align: center;
+      top: 12px;
+    }
+  </style>
 </head>
 <body>
   <header class="top-nav">
@@ -17,8 +23,7 @@
   </header>
 <div class = "center-container">
     <div>
-          <h1 style=""><i>Hello</i>, <b>I am Hailey!</b></h1>
-          <p>I am an upcoming digital app designer.</p>
+          <h1><i>Hello</i>, <b>Welcome to My Projects</b></h1>
 
       </div>
   </div>
