--- a/project/project.html
+++ b/project/project.html
@@ -13,13 +13,88 @@
       text-align: center;
       top: 12px;
     }
+    .radley-regular {
+  font-family: "Radley", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.radley-regular-italic {
+  font-family: "Radley", serif;
+  font-weight: 400;
+  font-style: italic;
+}
+.carlito-regular {
+  font-family: "Carlito", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.carlito-bold {
+  font-family: "Carlito", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.carlito-regular-italic {
+  font-family: "Carlito", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.carlito-bold-italic {
+  font-family: "Carlito", sans-serif;
+  font-weight: 700;
+  font-style: italic;
+}
+.top-nav {
+  position: fixed;
+  top: 30px;
+  right: 40px;
+  z-index: 100;
+}
+.top-logo {
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 80px;
+  width: auto;
+  z-index: 100;
+}
+
+.top-nav a {
+  font-family: "Radley", serif;
+  font-size: 30px;
+  color: #333;
+  text-decoration: none;
+  margin-left: 20px;
+  transition: color 0.3s ease;
+}
+
+.top-nav a:hover {
+  color: #9b4819;
+}
+
+
+
+
+body, html {
+  background-color:#f4f1e8;
+  height: 100%; /* Ensure body and html take full viewport height */
+  margin: 0;
+  padding: 0;
+  margin-bottom: 20px;
+}
+
   </style>
 </head>
 <body>
   <header class="top-nav">
-      <a href="project.html"><i>Project</i></a>
-      <a href="lab.html"><i>Lab</i></a>
-      <a href="cfu.html"><i>CFU</i></a>
+      <a href="../index.html"><i>Project</i></a>
+      <a href="../lab/lab.html"><i>Lab</i></a>
+      <a href="../cfu/cfu.html"><i>CFU</i></a>
+      <a href="../About_Me/aboutme.html"><i>CFU</i></a>
   </header>
 <div class = "center-container">
     <div>
