--- a/project/project.html
+++ b/project/project.html
@@ -94,7 +94,7 @@ body, html {
       <a href="../index.html"><i>Project</i></a>
       <a href="../lab/lab.html"><i>Lab</i></a>
       <a href="../cfu/cfu.html"><i>CFU</i></a>
-      <a href="../About_Me/aboutme.html"><i>CFU</i></a>
+      <a href="../About_Me/me.html"><i>CFU</i></a>
   </header>
 <div class = "center-container">
     <div>
