--- a/project/project.html
+++ b/project/project.html
@@ -9,11 +9,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Carlito:ital,wght@0,400;0,700;1,400;1,700&family=Radley:ital@0;1&display=swap" rel="stylesheet">
   <style>
-    h1{
-      text-align: center;
-      top: 12px;
+h1{
+  text-align: center;
     }
-    .radley-regular {
+.radley-regular {
   font-family: "Radley", serif;
   font-weight: 400;
   font-style: normal;
@@ -75,16 +74,9 @@
 .top-nav a:hover {
   color: #9b4819;
 }
-
-
-
-
 body, html {
   background-color:#f4f1e8;
   height: 100%; /* Ensure body and html take full viewport height */
-  margin: 0;
-  padding: 0;
-  margin-bottom: 20px;
 }
 
   </style>
@@ -94,7 +86,7 @@ body, html {
       <a href="../index.html"><i>Project</i></a>
       <a href="../lab/lab.html"><i>Lab</i></a>
       <a href="../cfu/cfu.html"><i>CFU</i></a>
-      <a href="../About_Me/me.html"><i>CFU</i></a>
+      <a href="../About_Me/me.html"><i>About Me</i></a>
   </header>
 <div class = "center-container">
     <div>
