--- a/About_Me/me.html
+++ b/About_Me/me.html
@@ -15,7 +15,7 @@
       <a href="../lab/lab.html"><i>Lab</i></a>
       <a href="../cfu/cfu.html"><i>CFU</i></a>
   </header>
-  <h1 style="top:12px; align-items:center;"><i>About,</i> <b>Hailey Sooknanan</b></h1>
+  <h1 style="top:12px; align-items:center;"><i>About</i> <b>Hailey Sooknanan</b></h1>
 <div class="float-container">
   <div class = "left-container">
     <div>
