--- a/project/project.html
+++ b/project/project.html
@@ -11,6 +11,7 @@
   <style>
 h1{
   text-align: center;
+  font-size: 20px;
     }
 .radley-regular {
   font-family: "Radley", serif;
@@ -89,5 +90,6 @@ body, html {
       <a href="../About_Me/me.html"><i>About Me</i></a>
   </header>
           <h1><i>Hello</i>, <b>Welcome to My Projects</b></h1>
+  
  
 </html>
