--- a/project/project.html
+++ b/project/project.html
@@ -12,7 +12,7 @@
 h1{
   text-align: center;
   font-size: 20px;
-  color:;
+  color:#9b4819;
     }
 .radley-regular {
   font-family: "Radley", serif;
