--- a/project/project.html
+++ b/project/project.html
@@ -87,7 +87,7 @@ body, html {
     }
 
     .project {
-        background:;
+        background:#9b4819;
         border-radius: 5px;
         padding: 12px;
         text-align: center;
