--- a/project/project.html
+++ b/project/project.html
@@ -119,8 +119,8 @@ body, html {
         </div>
     <div class="project">
             <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="400" height="450" src="https://haileys18.github.io/Love_Pets_Shelter/?#home" allowfullscreen></iframe>
-            <h3>PreParent</h3>
-            <p> An app created for the congressional app challenge based off parenthood.</p>
+            <h3>Loved Pets Shelter Website</h3>
+            <p> An website created for an animal pet shleter to adopt animals and volunteering</p>
         </div>
  </div>
 </html>
