--- a/project/project.html
+++ b/project/project.html
@@ -77,7 +77,7 @@ h1{
   color: #9b4819;
 }
 body, html {
-  background-color:#f4f1e8;
+  background-color:;
   height: 100%; /* Ensure body and html take full viewport height */
 }
   .project-grid {
@@ -87,7 +87,7 @@ body, html {
     }
 
     .project {
-        background:#9b4819;
+        background: white;
         border-radius: 5px;
         padding: 12px;
         text-align: center;
