--- a/project/project.html
+++ b/project/project.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="project.css" />
+  <link rel="stylesheet" href="project.css" >
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projects</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,7 +77,6 @@ h1{
   color: #9b4819;
 }
 body, html {
-  background-color:;
   height: 100%; /* Ensure body and html take full viewport height */
 }
   .project-grid {
