--- a/project/project.html
+++ b/project/project.html
@@ -101,7 +101,7 @@ body, html {
 </head>
 <body>
   <header class="top-nav">
-      <a href="../index.html"><i>Project</i></a>
+      <a href="../index.html"><i>Home</i></a>
       <a href="../lab/lab.html"><i>Lab</i></a>
       <a href="../cfu/cfu.html"><i>CFU</i></a>
       <a href="../About_Me/me.html"><i>About Me</i></a>
