--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Carlito:ital,wght@0,400;0,700;1,400;1,700&family=Radley:ital@0;1&display=swap" rel="stylesheet">
+  <style>
+    .bottom-right-img {
+    position: fixed;
+    bottom: 10px;  
+    right: 10px;    
+    width: 120px;   
+}
+  </style>
 </head>
 <body>
   <header class="top-nav">
@@ -29,5 +37,5 @@
       </div>
       </div>
   </div>
- 
+ <img src="validate.png" alt="Validate Logo" id="bottom-right-img">
 </html>
