--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Carlito:ital,wght@0,400;0,700;1,400;1,700&family=Radley:ital@0;1&display=swap" rel="stylesheet">
   <style>
     .bottom-right-img {
-    position: fixed;
-    bottom: 10px;  
-    right: 10px;    
-    width: 10px;   
+    background:url('validate.png');
+    width:100%;
+    height:698px; 
+    repeat-x;
 }
   </style>
 </head>
@@ -37,5 +37,7 @@
       </div>
       </div>
   </div>
+  <div id="background-img" class="background-img" >
  <img src="validate.png" alt="Validate Logo" id="bottom-right-img">
+  </div>
 </html>
