--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
       <div class="about-me">
           <h2 style="color: #9b4819;">
                       <a href="About_Me/me.html" style= "font-family: Radley, serif; font-size: 30px; color: #9b4819;"><i>About Me</i></a>
-                      <img src="validate.png" alt="Validate Logo" id="bottom-right-img">
+            <break></break>
+                      <img src="validate.png" alt="Validate Logo" id="bottom-right-img height:10px; width:10px;">
           </h2>
           
       </div>
