--- a/About_Me/me.html
+++ b/About_Me/me.html
@@ -13,7 +13,7 @@
   <header class="top-nav">
       <a href="../index.html"><i>Home</i></a>
       <a href="../lab/lab.html"><i>Lab</i></a>
-      <a href="../cfu/cfu.html"><i>CFU</i></a>
+      <a href="../projet/project.html"><i>Project</i></a>
   </header>
   <h1 style="top:12px; align-items:center;"><i>About</i> <b>Hailey Sooknanan</b></h1>
 <div class="float-container">
